Fix CMake settings, GTest and Python policies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,10 @@ include(ExternalProject)
 # Adding customized cmake module for building boost
 list(APPEND CMAKE_MODULE_PATH  "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
-project(CaloPulseSimulator VERSION 1.0.0 DESCRIPTION "Calorimeter Pulse Simulator C++ Library")
+project(CaloPulseSimulator VERSION 0.0.0 DESCRIPTION "Calorimeter Pulse Simulator C++ Library")
 
 set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
 
 enable_testing()
