--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -43,5 +43,9 @@ install(
   FILES ${CMAKE_CURRENT_BINARY_DIR}/py${PROJECT_NAME}.py
   DESTINATION ${Python_SITELIB})
 
-# Tests
-add_test(NAME pyTest_${PROJECT_NAME} COMMAND ${Python_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test.py)
+# Python tests
+add_test(
+  NAME pyTest_${PROJECT_NAME}
+  COMMAND ${Python_EXECUTABLE} -m unittest discover -s ${CMAKE_CURRENT_SOURCE_DIR}/tests -p *.py
+  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+  )
