Added flags to enable or disable the building of tests and docs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,17 +5,25 @@ include(ExternalProject)
 list(APPEND CMAKE_MODULE_PATH  "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
 project(cps VERSION 0.0.0 DESCRIPTION "Calorimeter Pulse Simulator Library")
+option(BUILD_TESTS "Build tests" OFF)
+option(BUILD_DOCS "Build docs" OFF)
+option(BUILD_PYTHON "Build Python SWIG module" ON)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
 
-enable_testing()
 add_subdirectory(lib)
-add_subdirectory(tests)
-add_subdirectory(docs)
 
-option(BUILD_PYTHON "Build Python SWIG module" ON)
+if(BUILD_TESTS)
+  enable_testing()
+  add_subdirectory(tests)
+endif()
+
+if(BUILD_DOCS)
+  add_subdirectory(docs)
+endif()
+
 if(BUILD_PYTHON)
   add_subdirectory(python)
 endif()
